macros/tests/since/fail/invalid_sem_ver.rs
#[openraft_macros::since(version = "1.0.0..0")]
fn main() {}
